# Dev-Sample-Repo

./: CMakeLists.txt  README.md  sonar-project.properties
source-code/: CMakeLists.txt  README.md  sonar-project.properties
source-code/include/: Calculator.hpp  ExpressionEvaluator.hpp  hello.h
source-code/src/: Calculator.cpp  ExpressionEvaluator.cpp  hello.cpp  main.cpp
source-code/test/: test_calculator.cpp  test_evaluator.cpp  test_hello.cpp
